fix overflow for markdown code

--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,7 @@ body.dark-mode .loader {
 .markdown code {
     background-color: #f7f7f7;
     padding: 2px 4px;
+    overflow-x: auto;
     border-radius: 3px;
 }
 
